--- a/build.gradle
+++ b/build.gradle
@@ -7,10 +7,7 @@ version '1.0-SNAPSHOT'
 sourceCompatibility = 1.11
 
 repositories {
-    mavenCentral()
-}
-
-repositories {
+    jcenter()
     mavenCentral()
 }
 
@@ -25,9 +22,18 @@ test {
 project.ext.lwjglVersion = "3.2.3"
 project.ext.jomlVersion = "1.10.3"
 project.ext.lwjglNatives = "natives-windows"
+project.ext.imguiVersion = '1.76-0.9'
 
 
 dependencies {
+    // ImGui Stuff
+    implementation "io.imgui.java:binding:$imguiVersion"
+    implementation "io.imgui.java:lwjgl3:$imguiVersion"
+
+    // Include all available natives, but it's likely that you want something specific
+    runtimeOnly "io.imgui.java:natives-windows:$imguiVersion"
+
+    // LWJGL Stuff
     implementation platform("org.lwjgl:lwjgl-bom:$lwjglVersion")
 
     implementation "org.lwjgl:lwjgl"
