--- a/build.gradle
+++ b/build.gradle
@@ -26,6 +26,9 @@ project.ext.imguiVersion = '1.76-0.9'
 
 
 dependencies {
+    // GSON
+    implementation 'com.google.code.gson:gson:2.9.0'
+
     // ImGui Stuff
     implementation "io.imgui.java:binding:$imguiVersion"
     implementation "io.imgui.java:lwjgl3:$imguiVersion"
